deployments/kubernetes/service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE}
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: ${SERVICE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${SERVICE}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${SERVICE}
    spec:
      containers:
        - name: ${SERVICE}
          image: showcases-${SERVICE}
          ports:
            - containerPort: 8080
