deployments/kubernetes/nats.yml
# IMPORTANT: This is a template, that can't be applied directly.
# Usage: envsubst < nats.yml | kubectl apply -f
apiVersion: v1
kind: Service
metadata:
  name: nats-loadbalancer
  namespace: $NAMESPACE
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: nats
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
      name: nats
