deployments/kubernetes/service-gateway-http.yml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE}
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: ${SERVICE}
spec:
  selector:
    app.kubernetes.io/name: ${SERVICE}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${SERVICE}
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: ${SERVICE}
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - api.${DOMAIN}
      secretName: ${NAMESPACE}-tls
  rules:
    - host: api.${DOMAIN}
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: ${SERVICE}
                port:
                  number: 80
